--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "list-of-books",
   "version": "1.0.0",
-  "description": "task3",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,8 +16,12 @@
     "url": "https://github.com/darly-r/list-of-books/issues"
   },
   "homepage": "https://github.com/darly-r/list-of-books#readme",
+  "devDependencies": {
+    "mocha": "^5.0.0"
+  },
   "dependencies": {
     "bootstrap": "^4.0.0",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "popper.js": "^1.12.9"
   }
 }
